--- a/wp-skyltar-style.css
+++ b/wp-skyltar-style.css
@@ -40,9 +40,10 @@
 }
 
 div[name="sk"] {
-  width: 80%;
+  width: 76%;
   height: 7px;
   margin-top: 8px;
+  margin-left: 23px;
   -webkit-transition: all 500ms cubic-bezier(.165,.84,.44,1);
   -moz-transition: all 500ms cubic-bezier(.165,.84,.44,1);
   -ms-transition: all 500ms cubic-bezier(.165,.84,.44,1);
@@ -66,10 +67,6 @@ div[name="sk"].sk-4 > h5 {
 
 div[name="sk"].sk-5 > h5 {
   margin-right: -110px;
-}
-
-div[name="sk"].sk-select {
-  border: solid 1px #000;
 }
 
 div.sk-red {
@@ -97,11 +94,21 @@ div.sk-white {
 }
 
 div[name="sk"].same {
-  width: 80%;
+  width: 76%;
 }
 
 div[name="sk"].deactivated {
   display: none;
+}
+
+input[name="sk-color"].deactivated {
+  display: none;
+}
+
+input[name="sk-color"] {
+  position: absolute;
+  margin-top: -2px;
+  margin-left: -22px;  
 }
 
 input[name="widget-o_skyltar_widget[2][blue]"] {
